# sic

./: .gitignore  .travis.yml  Cargo.toml  README.md
.circleci/: config.yml
.rpm/: sic.spec
docker/fedora-rpmbuild-rust/: Dockerfile
docker/ghr/: Dockerfile
samples/: SafeInCloud.db  SafeInCloud.xml
src/: byte_reader.rs  decrypt.rs  main.rs
src/commands/: cards.rs
src/database/: card.rs  database.rs  decrypt.rs  field.rs  helper.rs  mod.rs  parse.rs  result.rs
src/decrypt/: mod.rs
src/utils/: byte_read.rs  byte_reader.rs  format.rs  fuzzy.rs  mod.rs  option.rs  password.rs
