[package]
name = "sic"
version = "0.1.1"
description = "Command Line Tool for SafeInCloud"
license-file = "LICENSE"
authors = ["b1zzu"]
edition = "2018"

[dependencies]
rust-crypto = "0.2.36"
libflate = "0.1.21"
regex = "1.1.5"
clap = "2.32.0"
xml-rs = "0.8.0"
dirs = "1.0.5"
rpassword = "3.0.1"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
sic = { path = "/usr/bin/sic" }
